--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
+    "react-loader-spinner": "^5.4.5",
     "react-useanimations": "^2.10.0",
     "zustand": "^4.4.1"
   },
